# project-portfolio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tasks
src/FileManagerCLI/: CMakeLists.txt
src/FileManagerCLI/src/: Util.cpp  Util.h  main.cpp
src/FileManagerCLI/src/CommandProcessor/: CommandProcessor.cpp  CommandProcessor.h
src/FileManagerCLI/src/Core/: Core.h  filespch.cpp  filespch.h
src/FileManagerCLI/src/Enumerators/: CommandsEnum.h  LogEnums.h  SystemEnums.h
src/FileManagerCLI/src/Exceptions/InputParsing/: EmptyInputException.h  EmptyQuotedArgumentException.h  FileManagerException.h  NonIsolatedQuotedArgumentException.h  UnpairedQuoteException.h
src/FileManagerCLI/src/Logging/: Log.cpp  Log.h
src/FileManagerCLI/src/Manager/: Manager.cpp  Manager.h
src/FileManagerCLI/src/System/Account/: AccountEntity.cpp  AccountEntity.h  Group.cpp  Group.h  User.cpp  User.h
src/FileManagerCLI/src/System/Filesystem/: Directory.cpp  Directory.h  File.cpp  File.h  FilesystemEntity.cpp  FilesystemEntity.h
src/FileManagerCLI/src/System/SystemManagers/: AccountManager.cpp  AccountManager.h  FilesystemManager.cpp  FilesystemManager.h
src/TaskManagerCLI/: CMakeLists.txt  Manager.cpp  Manager.h  Tasks.h  main.cpp  taskpch.h  tasks.sh
